Login # fixed spacing - mobile

--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -8,9 +8,9 @@
 }
 
 .auth_user_login_form{
-   margin: 45px 0px;
-   margin-top: 65px;
+   margin-top: 48px;
 }
+
 .auth_user_login_form .input_box{
    width: 312px;
    position: relative;
@@ -109,14 +109,14 @@
 }
 
 @media (max-width: 575px) {
+   .auth_user_login_form{
+   margin-top: 24px;
+   }
    .auth_user_login_form .input_box{
-      width: 97%;
+      width: 100%;
    }
    .auth_user_login_form .form_submit{
-      width: 97%;
-   }
-   .auth_user_login{
-      padding: 30px 0px;
+      width: 100%;
    }
    
 }
